--- a/src/get-pack.html
+++ b/src/get-pack.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Athlon / Front-end Boilerplate Template</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500,,600,700&display=swap" rel="stylesheet">
+    <title>Stickerz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
